solved the right white space horizontal scroll problem

--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,25 @@
     copyright sekcija: #101522
 */
 
+/* ! ADD THIS TO DEBUG 
+
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+*/
+
 /* GENERAL-DEFAULT STYLES USED  */
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+     overflow-x: hidden;
     font-family: 'Rubik', sans-serif;
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+  
 }
 
 html {
